create auth service

--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,8 +1,8 @@
-<div class="relative flex items-center border border-gray-300 rounded-lg p-2 focus-within:ring-2 focus-within:ring-orange-500"
+<!-- <div class="relative flex items-center border border-gray-300 rounded-lg p-2 focus-within:ring-2 focus-within:ring-orange-500"
      [class.opacity-50]="disabled" [class.pointer-events-none]="disabled">
-    
-    <!-- Icône à gauche -->
-    <ng-container *ngIf="iconLeft">
+     -->
+<!-- Icône à gauche -->
+<!-- <ng-container *ngIf="iconLeft">
         <span class="mr-2" *ngIf="iconLeftClickable; else nonClickableLeft" (click)="onIconLeftClick()">
             <i [class]="iconLeft" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
         </span>
@@ -11,20 +11,20 @@
                 <i [class]="iconLeft" class="text-gray-500"></i>
             </span>
         </ng-template>
-    </ng-container>
+    </ng-container> -->
 
-    <!-- Input principal -->
-    <input [type]="type"
+<!-- Input principal -->
+<!-- <input [type]="type"
            [placeholder]="placeholder"
            [(ngModel)]="value"
            (ngModelChange)="onChange($event)"
            (blur)="onTouch()"
            [disabled]="disabled"
            [required]="required"
-           class="flex-grow bg-transparent outline-none placeholder-gray-400 disabled:bg-gray-200 disabled:text-gray-500 focus:outline-none" />
+           class="flex-grow bg-transparent outline-none placeholder-gray-400 disabled:bg-gray-200 disabled:text-gray-500 focus:outline-none" /> -->
 
-    <!-- Icône à droite -->
-    <ng-container *ngIf="iconRight">
+<!-- Icône à droite -->
+<!-- <ng-container *ngIf="iconRight">
         <span class="ml-2" *ngIf="iconRightClickable; else nonClickableRight" (click)="onIconRightClick()">
             <i [class]="iconRight" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
         </span>
@@ -34,7 +34,7 @@
             </span>
         </ng-template>
     </ng-container>
-</div>
+</div> -->
 
 
 
