--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -1,4 +1,5 @@
-<nav class="fixed top-0 z-50 w-full bg-white shadow border-gray-200 dark:bg-blue-50 dark:border-gray-700 sm:ml-60 ">
+<nav
+  class="fixed top-0 z-40 w-full bg-white shadow border-gray-200 dark:bg-blue-50 dark:border-gray-700 sm:pl-60 md:pl-60 lg:pl-60 xl:pl-60">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
@@ -12,12 +13,8 @@
               d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z">
             </path>
           </svg>
-          Flowbite
         </button>
-        <!-- <a class="flex ms-2 md:me-24" aria-hidden="true">
-          <i class=""></i>
-          <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-black">Flowbite</span>
-        </a> -->
+
       </div>
       <div class="flex items-center">
         <div class="flex items-center ms-3">
@@ -68,4 +65,5 @@
       </div>
     </div>
   </div>
+  <app-breadcrumb></app-breadcrumb>
 </nav>
