--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,7 +1,7 @@
 <app-default-header></app-default-header>
 <app-default-side-bar></app-default-side-bar>
 <div class="p-0 sm:ml-60">
-   <div class="p-2 shadow dark:border-gray-700 mt-14">
+   <div class="px-2 pb-2 shadow dark:border-gray-700 mt-20 pt-4">
       <router-outlet></router-outlet>
    </div>
 </div>
