--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-100 dark:bg-blue-50 px-3 py-1 border border-t-1 border-x-0 border-b-0 border-gray-700"
+<nav class="bg-gray-100 dark:bg-gray-600 px-3 py-1 border border-t-1 border-x-0 border-b-0 border-gray-700"
     aria-label="breadcrumb">
     <ol class="list-reset flex text-gray-600 dark:text-gray-400">
         <li *ngFor="let breadcrumb of breadcrumbs; let last = last" class="flex items-center">
