--- a/src/app/shared/components/custom-modal/custom-modal.component.html
+++ b/src/app/shared/components/custom-modal/custom-modal.component.html
@@ -1,1 +1,10 @@
-<p>custom-modal works!</p>
+<div>
+    <div class="modal-footer"></div>
+    <div class="modal-footer">
+        <ng-container></ng-container>
+    </div>
+    <div class="modal-footer">
+        <custom-button [value]="'Non'"></custom-button>
+        <custom-button [value]="'Oui'"></custom-button>
+    </div>
+</div>
