--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -1,10 +1,9 @@
 <nav
-  class="fixed top-0 z-40 w-full bg-white shadow border-gray-200 dark:bg-blue-50 dark:border-gray-700 sm:pl-60 md:pl-60 lg:pl-60 xl:pl-60">
+  class="fixed top-0 z-40 w-full bg-white shadow border-gray-200 dark:bg-gray-700 dark:border-gray-700 sm:pl-60 md:pl-60 lg:pl-60 xl:pl-60">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
-        <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
-          type="button"
+        <button type="button" (click)="toggleSidebar()"
           class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
           <span class="sr-only">Open sidebar</span>
           <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
