--- a/src/app/shared/components/custom-button/custom-button.component.html
+++ b/src/app/shared/components/custom-button/custom-button.component.html
@@ -1,1 +1,1 @@
-<p>custom-button works!</p>
+<button class=" bg-blue-800 text-blue-50 rounded-full px-3 py-1.5 hover:bg-blue-700"> {{value}} </button>
