--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-center h-screen" *ngIf="loading">
     <div class="text-center">
         <!-- Le spinner -->
-        <div class="spinner mx-auto mb-4"></div>
+        <div class="spinner mx-auto mb-4 border-t-blue-900"></div>
         <!-- Texte de chargement -->
         <span class="text-gray-700 font-semibold text-lg">Chargement...</span>
     </div>
