--- a/src/app/views/contrat/list-contract/list-contract.component.html
+++ b/src/app/views/contrat/list-contract/list-contract.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between mb-3">
     <custom-input-search></custom-input-search>
-    <custom-button [value]="'Ajouter un contrat'"></custom-button>
+    <custom-button [name]="'Ajouter un contrat'"></custom-button>
 </div>
 
 
