--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,32 +1,43 @@
-<div class="relative flex items-center border border-gray-300 rounded-lg p-2 focus-within:ring-2 focus-within:ring-orange-500"
-    [class.opacity-50]="disabled" [class.pointer-events-none]="disabled">
-
-    <!-- Icône à gauche -->
-    <ng-container *ngIf="iconLeft">
-        <span class="mr-2" *ngIf="iconLeftClickable; else nonClickableLeft" (click)="onIconLeftClick()">
-            <i [class]="iconLeft" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
-        </span>
-        <ng-template #nonClickableLeft>
-            <span class="mr-2">
-                <i [class]="iconLeft" class="text-gray-500"></i>
-            </span>
-        </ng-template>
+<!-- Conteneur du label et de l'input -->
+<div class="flex flex-col space-y-2">
+    <!-- Affichage du label si fourni -->
+    <ng-container *ngIf="label">
+        <label [for]="inputId" class="block text-sm font-medium text-gray-700" [class.text-red-500]="required">
+            {{ label }} <span *ngIf="required" class="text-red-500">*</span>
+        </label>
     </ng-container>
 
-    <!-- Input principal -->
-    <input [type]="type" [placeholder]="placeholder" [value]="value" (input)="handleInputChange($event)"
-        (blur)="onTouch()" [disabled]="disabled" [required]="required" class="flex-grow bg-transparent outline-none placeholder-gray-400 disabled:bg-gray-200 disabled:text-gray-500
-    focus:outline-none" />
-
-    <!-- Icône à droite -->
-    <ng-container *ngIf="iconRight">
-        <span class="ml-2" *ngIf="iconRightClickable; else nonClickableRight" (click)="onIconRightClick()">
-            <i [class]="iconRight" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
-        </span>
-        <ng-template #nonClickableRight>
-            <span class="ml-2">
-                <i [class]="iconRight" class="text-gray-500"></i>
+    <!-- Conteneur de l'input -->
+    <div class="relative">
+        <!-- Icône à gauche -->
+        <ng-container *ngIf="iconLeft">
+            <span class="absolute inset-y-0 left-0 flex items-center pl-3"
+                *ngIf="iconLeftClickable; else nonClickableLeft" (click)="onIconLeftClick()">
+                <i [class]="iconLeft" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
             </span>
-        </ng-template>
-    </ng-container>
+            <ng-template #nonClickableLeft>
+                <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                    <i [class]="iconLeft" class="text-gray-500"></i>
+                </span>
+            </ng-template>
+        </ng-container>
+
+        <!-- Input principal -->
+        <input [type]="type" [placeholder]="placeholder" (input)="handleInputChange($event)" (blur)="onTouch()"
+            [disabled]="disabled" [required]="required"
+            class="block w-full pl-10 pr-10 py-2 border border-gray-700 rounded-lg shadow-sm focus:ring-1 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400 disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed sm:text-sm" />
+
+        <!-- Icône à droite -->
+        <ng-container *ngIf="iconRight">
+            <span class="absolute inset-y-0 right-0 flex items-center pr-3"
+                *ngIf="iconRightClickable; else nonClickableRight" (click)="onIconRightClick()">
+                <i [class]="iconRight" class="text-gray-500 hover:text-gray-800 cursor-pointer"></i>
+            </span>
+            <ng-template #nonClickableRight>
+                <span class="absolute inset-y-0 right-0 flex items-center pr-3">
+                    <i [class]="iconRight" class="text-gray-500"></i>
+                </span>
+            </ng-template>
+        </ng-container>
+    </div>
 </div>
