--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,8 @@
 #logo-sidebar.open {
     transform: translateX(0); // Drawer ouvert
 }
+.active {
+    background-color: #1e40af;
+    /* Example active background color */
+    color: white;
+}
