get after register

--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -11,7 +11,7 @@
             <i [ngClass]="isLeftIconVisible ? 'ri-arrow-left-wide-line' : 'ri-arrow-right-wide-line'"></i>
           </button>
         </span>
-        <span class="tw-font-semibold tw-text-gray-800 tw-dark:text-white">Logo</span>
+        <!-- <span class="tw-font-semibold tw-text-gray-800 tw-dark:text-white">Logo</span> -->
       </div>
 
       <!-- Mobile Sidebar Button -->
