--- a/src/app/containers/default-layout/default-side-bar/default-side-bar.component.html
+++ b/src/app/containers/default-layout/default-side-bar/default-side-bar.component.html
@@ -1,59 +1,61 @@
 <!-- Overlay -->
-<div *ngIf="isOpen" (click)="closeDrawer()" class="fixed inset-0 bg-black bg-opacity-50 z-40"></div>
+<div *ngIf="isOpen" (click)="closeDrawer()" class="tw-fixed tw-inset-0 tw-bg-black tw-bg-opacity-50 tw-z-40"></div>
 
 <aside [ngClass]="{
-    'translate-x-0': isOpen,
-    '-translate-x-full': !isOpen
+    'tw-translate-x-0': isOpen,
+    'tw--translate-x-full': !isOpen
   }"
-    class="fixed top-0 left-0 z-40 w-60 h-screen transition-transform -translate-x-full border-gray-200 sm:translate-x-0 bg-blue-900 dark:bg-blue-900 dark:border-gray-700"
+    class="tw-fixed tw-top-0 tw-left-0 tw-z-40 tw-w-60 tw-h-screen tw-transition-transform tw--translate-x-full tw-border-gray-200 sm:tw-translate-x-0 tw-bg-blue-900 dark:tw-bg-blue-900 dark:tw-border-gray-700"
     aria-label="Sidebar">
 
     <!-- Logo section -->
-    <div class="flex items-center justify-center px-4 py-0 ">
-        <a routerLink="/" class="block py-1">
-            <img src="../../../../assets/images/icons_logos/company_logo.png" alt="Company Logo"
-                class="h-12 w-full object-contain">
+    <div class="tw-flex tw-items-center tw-justify-start ms-2 tw-pt-3 ">
+        <a href="/dashboard"
+            class="tw-flex tw-items-center tw-text-white tw-text-xl tw-font-semibold tw-text-gray-900 dark:tw-text-white">
+            <img class="tw-rounded-lg tw-shadow tw-h-8 tw-max-w-full tw-max-h-full tw-mr-2"
+                src="../../../../assets/images/icons_logos/logo_GesEmploy.png" alt="logo">
+            GesEmploy
         </a>
     </div>
 
     <!-- Navigation Items -->
-    <div class="h-full pb-4 pt-4 overflow-y-auto bg-blue-900 dark:bg-blue-900">
-        <ul class="space-y-2 font-medium">
+    <div class="tw-h-full tw-pb-4 tw-pt-3 tw-overflow-y-auto tw-bg-blue-900 dark:tw-bg-blue-900">
+        <ul class="tw-space-y-2 tw-font-medium">
             <li *ngFor="let item of navItems">
                 <a *ngIf="!item.disabled" [routerLink]="item.url" routerLinkActive="active"
                     (click)="closeDrawerOnNavigate(item.url)"
-                    class="flex items-center gap-1 p-2 text-gray-50 dark:text-white hover:bg-blue-500 hover:text-white dark:hover:bg-gray-700 group">
+                    class="tw-flex tw-items-center tw-gap-1 tw-p-2 tw-text-gray-50 dark:tw-text-white hover:tw-bg-blue-500 hover:tw-text-white dark:hover:tw-bg-gray-700 tw-group">
                     <i *ngIf="item.icon" [class]="item.icon"></i> {{ item.title }}
                     <span *ngIf="item.badge" [class]="item.badge.class">{{ item.badge.count }}</span>
 
                     <!-- Toggle button for dropdown if children exist -->
                     <button *ngIf="item.children?.length" (click)="toggleDropdown(item)" type="button"
-                        class="ml-auto text-gray-400 hover:text-gray-500 dark:hover:text-white">
+                        class="tw-ml-auto tw-text-gray-400 hover:tw-text-gray-500 dark:hover:tw-text-white">
                         <i [class]="item.isOpen ? 'ri-arrow-up-s-line' : 'ri-arrow-down-s-line'"></i>
                     </button>
                 </a>
 
                 <!-- Recursive dropdown for nested children (Level 1) -->
-                <ul *ngIf="item.children?.length && item.isOpen" class="space-y-2 font-medium">
+                <ul *ngIf="item.children?.length && item.isOpen" class="tw-space-y-2 tw-font-medium">
                     <li *ngFor="let child of item.children">
                         <a [routerLink]="child.url" routerLinkActive="active" (click)="closeDrawerOnNavigate(child.url)"
-                            class="flex items-center p-2 pl-8 text-gray-50 dark:text-white hover:bg-blue-500 hover:text-white dark:hover:bg-gray-700 group">
+                            class="tw-flex tw-items-center tw-p-2 tw-pl-8 tw-text-gray-50 dark:tw-text-white hover:tw-bg-blue-500 hover:tw-text-white dark:hover:tw-bg-gray-700 tw-group">
                             <i *ngIf="child.icon" [class]="child.icon"></i> {{ child.title }}
                             <span *ngIf="child.badge" [class]="child.badge.class">{{ child.badge.count }}</span>
 
                             <!-- Toggle button for nested dropdown if child has its own children -->
                             <button *ngIf="child.children?.length" (click)="toggleDropdown(child)" type="button"
-                                class="ml-auto text-gray-400 hover:text-gray-500 dark:hover:text-white">
+                                class="tw-ml-auto tw-text-gray-400 hover:tw-text-gray-500 dark:hover:tw-text-white">
                                 <i [class]="child.isOpen ? 'ri-arrow-up-s-line' : 'ri-arrow-down-s-line'"></i>
                             </button>
                         </a>
 
                         <!-- Recursive dropdown for Level 2 -->
-                        <ul *ngIf="child.children?.length && child.isOpen" class="space-y-2 font-medium">
+                        <ul *ngIf="child.children?.length && child.isOpen" class="tw-space-y-2 tw-font-medium">
                             <li *ngFor="let subChild of child.children">
                                 <a [routerLink]="subChild.url" routerLinkActive="active"
                                     (click)="closeDrawerOnNavigate(subChild.url)"
-                                    class="flex items-center p-2 pl-11 text-gray-50 dark:text-white hover:bg-blue-500 hover:text-white dark:hover:bg-gray-700 group">
+                                    class="tw-flex tw-items-center tw-p-2 tw-pl-11 tw-text-gray-50 dark:tw-text-white hover:tw-bg-blue-500 hover:tw-text-white dark:hover:tw-bg-gray-700 tw-group">
                                     <i *ngIf="subChild.icon" [class]="subChild.icon"></i> {{ subChild.title }}
                                     <span *ngIf="subChild.badge" [class]="subChild.badge.class">{{ subChild.badge.count
                                         }}</span>
@@ -61,18 +63,19 @@
                                     <!-- Toggle button for Level 3 -->
                                     <button *ngIf="subChild.children?.length" (click)="toggleDropdown(subChild)"
                                         type="button"
-                                        class="ml-auto text-gray-400 hover:text-gray-500 dark:hover:text-white">
+                                        class="tw-ml-auto tw-text-gray-400 hover:tw-text-gray-500 dark:hover:tw-text-white">
                                         <i
                                             [class]="subChild.isOpen ? 'ri-arrow-up-s-line' : 'ri-arrow-down-s-line'"></i>
                                     </button>
                                 </a>
 
                                 <!-- Recursive dropdown for Level 4 -->
-                                <ul *ngIf="subChild.children?.length && subChild.isOpen" class="space-y-2 font-medium">
+                                <ul *ngIf="subChild.children?.length && subChild.isOpen"
+                                    class="tw-space-y-2 tw-font-medium">
                                     <li *ngFor="let fourthChild of subChild.children">
                                         <a [routerLink]="fourthChild.url" routerLinkActive="active"
                                             (click)="closeDrawerOnNavigate(fourthChild.url)"
-                                            class="flex items-center p-2 pl-14 text-gray-50 dark:text-white hover:bg-blue-500 hover:text-white dark:hover:bg-gray-700 group">
+                                            class="tw-flex tw-items-center tw-p-2 tw-pl-14 tw-text-gray-50 dark:tw-text-white hover:tw-bg-blue-500 hover:tw-text-white dark:hover:tw-bg-gray-700 tw-group">
                                             <i *ngIf="fourthChild.icon" [class]="fourthChild.icon"></i> {{
                                             fourthChild.title
                                             }}
@@ -83,7 +86,7 @@
                                             <!-- Toggle button for Level 5 -->
                                             <button *ngIf="fourthChild.children?.length"
                                                 (click)="toggleDropdown(fourthChild)" type="button"
-                                                class="ml-auto text-gray-400 hover:text-gray-500 dark:hover:text-white">
+                                                class="tw-ml-auto tw-text-gray-400 hover:tw-text-gray-500 dark:hover:tw-text-white">
                                                 <i
                                                     [class]="fourthChild.isOpen ? 'ri-arrow-up-s-line' : 'ri-arrow-down-s-line'"></i>
                                             </button>
@@ -91,11 +94,11 @@
 
                                         <!-- Recursive dropdown for Level 5 -->
                                         <ul *ngIf="fourthChild.children?.length && fourthChild.isOpen"
-                                            class="space-y-2 font-medium">
+                                            class="tw-space-y-2 tw-font-medium">
                                             <li *ngFor="let fifthChild of fourthChild.children">
                                                 <a [routerLink]="fifthChild.url" routerLinkActive="active"
                                                     (click)="closeDrawerOnNavigate(fifthChild.url)"
-                                                    class="flex items-center p-2 pl-17 text-gray-50 dark:text-white hover:bg-blue-500 hover:text-white dark:hover:bg-gray-700 group">
+                                                    class="tw-flex tw-items-center tw-p-2 tw-pl-17 tw-text-gray-50 dark:tw-text-white hover:tw-bg-blue-500 hover:tw-text-white dark:hover:tw-bg-gray-700 tw-group">
                                                     <i *ngIf="fifthChild.icon" [class]="fifthChild.icon"></i> {{
                                                     fifthChild.title }}
                                                     <span *ngIf="fifthChild.badge" [class]="fifthChild.badge.class">{{
@@ -116,12 +119,12 @@
 
 
     <!-- Theme Toggle Button (fixed at the bottom) -->
-    <div class="absolute bottom-4 w-full px-4">
+    <div class="tw-absolute tw-bottom-4 tw-w-full tw-px-4">
         <button (click)="toggleTheme()"
-            class="flex items-center justify-center w-full p-2 bg-gray-200 dark:bg-gray-600 rounded-lg hover:bg-gray-300 dark:hover:bg-gray-700 transition-colors duration-200">
-            <i *ngIf="isDarkMode" class="ri-sun-line text-yellow-400 text-xl"></i>
-            <i *ngIf="!isDarkMode" class="ri-moon-line text-gray-900 dark:text-gray-100 text-xl"></i>
-            <span class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
+            class="tw-flex tw-items-center tw-justify-center tw-w-full tw-p-2 tw-bg-gray-200 dark:tw-bg-gray-600 tw-rounded-lg hover:tw-bg-gray-300 dark:hover:tw-bg-gray-700 tw-transition-colors tw-duration-200">
+            <i *ngIf="isDarkMode" class="ri-sun-line tw-text-yellow-400 tw-text-xl"></i>
+            <i *ngIf="!isDarkMode" class="ri-moon-line tw-text-gray-900 dark:tw-text-gray-100 tw-text-xl"></i>
+            <span class="tw-ml-2 tw-text-sm tw-font-medium tw-text-gray-900 dark:tw-text-gray-100">
                 {{ isDarkMode ? 'Mode Clair' : 'Mode Sombre' }}
             </span>
         </button>
