--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -11,14 +11,17 @@
     <!-- Login Content -->
     <div
         class="tw-relative tw-flex tw-flex-col tw-items-center tw-justify-center tw-px-6 tw-py-8 tw-mx-auto md:tw-h-screen lg:tw-py-0">
-        <a href="#"
-            class="tw-flex tw-items-center tw-mb-6 tw-text-2xl tw-font-semibold tw-text-gray-900 dark:tw-text-white">
-            <img class="tw-w-8 tw-h-8 tw-mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
-                alt="logo">
-            GesEmploy
-        </a>
+
         <div
             class="tw-w-full tw-bg-white tw-rounded-lg tw-shadow dark:tw-border md:tw-mt-0 sm:tw-max-w-md xl:tw-p-0 dark:tw-bg-gray-800 dark:tw-border-gray-700">
+            <div class="tw-flex tw-justify-center tw-pt-5">
+                <a href="#"
+                    class=" tw-flex tw-items-center tw-text-2xl tw-font-semibold tw-text-gray-900 dark:tw-text-white">
+                    <img class="tw-rounded-lg tw-shadow tw-w-12 tw-h-12 tw-max-w-full tw-max-h-full tw-mr-2"
+                        src="../../../../assets/images/icons_logos/logo_GesEmploy.png" alt="logo">
+                    GesEmploy
+                </a>
+            </div>
             <div class="tw-p-6 tw-space-y-4 md:tw-space-y-6 sm:tw-p-8">
                 <h1
                     class="tw-text-xl tw-font-bold tw-leading-tight tw-tracking-tight tw-text-gray-900 md:tw-text-2xl dark:tw-text-white">
